rbx_xml/src/tests/snapshots/rbx_xml__tests__three-unique-parts__decoded.snap
---
source: rbx_xml/src/tests/mod.rs
expression: "DomViewer::new().view_children(&decoded)"
---
- referent: referent-0
  name:
    Utf8:
      - Brush your teeth
  class: Part
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - -5.5
          - 4
          - -12.5
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 0
        - 255
        - 255
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FormFactor:
      Enum: 1
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    Reflectance:
      Float32: 0
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Shape:
      Enum: 1
    Size:
      Vector3:
        - 1
        - 2
        - 3
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
- referent: referent-1
  name:
    Utf8:
      - Eat your greens
  class: Part
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - -11.5
          - -0.499993
          - -17.5
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 44
        - 101
        - 29
    CustomPhysicalProperties:
      PhysicalProperties:
        density: 0.7
        friction: 0.3
        elasticity: 0.5
        frictionWeight: 1
        elasticityWeight: 1
    FormFactor:
      Enum: 1
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    Reflectance:
      Float32: 0
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Shape:
      Enum: 1
    Size:
      Vector3:
        - 4
        - 5
        - 6
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
- referent: referent-2
  name:
    Utf8:
      - Live wildly
  class: Part
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - 5.5
          - 8.5
          - -25.5
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 255
        - 0
        - 191
    CustomPhysicalProperties:
      PhysicalProperties:
        density: 90.66
        friction: 1.44
        elasticity: 0.65
        frictionWeight: 50.5
        elasticityWeight: 40.5
    FormFactor:
      Enum: 1
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    Reflectance:
      Float32: 0
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Shape:
      Enum: 1
    Size:
      Vector3:
        - 7
        - 8
        - 9
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
